--- a/Instructions/dotnet/Mod03/20532B_LAB_03.md
+++ b/Instructions/dotnet/Mod03/20532B_LAB_03.md
@@ -16,7 +16,7 @@ After you complete this lab, you will be able to:
 
   * Publish an ASP.NET web application to a Web App.
 
-  * Modify the configuration of the Web App in the Management Portal.
+  * Modify the configuration of the Web App in the Portal.
 
 ### Lab Setup
 
@@ -48,7 +48,7 @@ Before starting this lab, you must complete the lab in Module 2. For the lab in 
 
 In this exercise, you will:
 
-  * Create a Web App instance in the Management Portal.
+  * Create a Web App instance in the Portal.
 
   * Go to the URL for the new Web App.
 
@@ -58,7 +58,7 @@ The main tasks for this exercise are as follows:
 
   2. Go to the newly created Web App's placeholder page.
 
-#### Task 1:	Create a Web App instance by using the Management Portal
+#### Task 1: Create a Web App instance by using the Portal
 
 1.  Sign in to the Azure Portal (https://portal.azure.com).
 
@@ -82,13 +82,13 @@ The main tasks for this exercise are as follows:
 
   * Server Admin Login/Password: **Supply your own values**
 
-#### Task 2:	Go to the newly created Web App's placeholder page
+#### Task 2: Go to the newly created Web App's placeholder page
 
 1.  View the blade for your Web App.
 
 2.  Go to your new Web App.
 
-> **Results**: After completing this exercise, you will have used the Management Portal to create a Web App instance.
+> **Results:** After completing this exercise, you will have used the Portal to create a Web App instance.
 
 ## Exercise 2:	Deploying an ASP.NET Web Application to an Azure Web App
 
@@ -110,7 +110,7 @@ The main tasks for this exercise are as follows:
 
   4. Verify that the web application is successfully published.
 
-#### Task 1:	Open an existing ASP.NET web application project with Visual Studio 2015
+#### Task 1: Open an existing ASP.NET web application project with Visual Studio 2015
 
 1. Open the **Contoso.Events** solution from the following location:
 
@@ -118,7 +118,7 @@ The main tasks for this exercise are as follows:
 
 2. Debug the web application to verify that it works.
 
-#### Task 2:	Download the publish profile for the Azure Web App
+#### Task 2: Download the publish profile for the Azure Web App
 
 1. Sign in to the Azure Portal (https://portal.azure.com).
 
@@ -128,15 +128,15 @@ The main tasks for this exercise are as follows:
 
   - Save location: **Allfiles (F):\\Mod03\\Labfiles**
 
-#### Task 3:	Publish the ASP.NET web application to the Azure Web App
+#### Task 3: Publish the ASP.NET web application to the Azure Web App
 
 1. Publish the ASP.NET web application by using the publish profile.
 
-#### Task 4:	Verify that the web application is successfully published
+#### Task 4: Verify that the web application is successfully published
 
 1.  Verify that the Web App is working correctly in Azure.
 
-> **Results**: After completing this exercise, you will have used a publish profile to publish web applications directly to a Web App.
+> **Results:** After completing this exercise, you will have used a publish profile to publish web applications directly to a Web App.
 
 ## Exercise 3:	Configuring an Azure Web App
 
@@ -146,7 +146,7 @@ In this exercise, you will:
 
   * Use the **ConfigurationManager** class to read custom app settings from a web configuration file.
 
-  * Modify custom app settings by using the Management Portal.
+  * Modify custom app settings by using the Portal.
 
 The main tasks for this exercise are as follows:
 
@@ -154,11 +154,11 @@ The main tasks for this exercise are as follows:
 
   2. Publish web application to the Azure Web App.
 
-  3. Modify the app settings in the Management Portal.
+  3. Modify the app settings in the Portal.
 
   4. Verify that the app settings are successfully updated.
 
-#### Task 1:	Implement logic to read a configuration setting from app settings
+#### Task 1: Implement logic to read a configuration setting from app settings
 
 1. View the **EventsListViewModel** class in the **Contoso.Events.ViewModels** project.
 
@@ -175,13 +175,13 @@ The main tasks for this exercise are as follows:
 
 4. Verify that the local web application is now using the app setting.
 
-#### Task 2:	Publish web application to the Azure Web App
+#### Task 2: Publish web application to the Azure Web App
 
 1. Publish the ASP.NET web application by using the most recent publish profile.
 
 2. Verify that the cloud-based web application is now using the app setting.
 
-#### Task 3:	Modify the app settings in the Management Portal
+#### Task 3: Modify the app settings in the Portal
 
 1. Sign in to the Azure Portal (*https://portal.azure.com*).
 
@@ -193,11 +193,11 @@ The main tasks for this exercise are as follows:
 
   - App Setting Value: **2**
 
-#### Task 4:	Verify that the app settings are successfully updated
+#### Task 4: Verify that the app settings are successfully updated
 
 1. Verify that the web application in the cloud is now using the updated App Settings entry.
 
-> **Results**: After completing this exercise, you will have configured custom app settings by using a Web.config file and the Azure Portal.
+> **Results:** After completing this exercise, you will have configured custom app settings by using a Web.config file and the Azure Portal.
 
 ©2014 Microsoft Corporation. All rights reserved.  The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.  
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.  
