--- a/Instructions/dotnet/Mod03/20532B_LAB_AK_03.md
+++ b/Instructions/dotnet/Mod03/20532B_LAB_AK_03.md
@@ -4,7 +4,7 @@
 
 ## Exercise 1: Creating an Azure Web App
 
-#### Task 1: Create a Web App instance by using the Management Portal
+#### Task 1: Create a Web App instance by using the Portal
 
 1.  On the Start screen, click the **Internet Explorer** tile.
 
@@ -16,7 +16,7 @@
 
 5.  Click **Sign In**.
 
-> **Note:** If this is your first time logging in to the Management Portal, you may be prompted with a “Welcome” dialog. You can safely close this dialog and continue.
+> **Note:** If this is your first time logging in to the Portal, you may be prompted with a “Welcome” dialog. You can safely close this dialog and continue.
 
 1.  In the navigation pane on the left side of the screen, click **New**.
 
@@ -230,7 +230,7 @@
 
 4.  Close the tab displaying the Web App.
 
-#### Task 3: Modify the app settings in the Management Portal
+#### Task 3: Modify the app settings in the Portal
 
 1.  On the Start screen, click the **Internet Explorer** tile.
 
