--- a/Instructions/dotnet/Mod04/20532B_LAB_04.md
+++ b/Instructions/dotnet/Mod04/20532B_LAB_04.md
@@ -14,7 +14,7 @@ After you complete this lab, you will be able to:
 
   * Use Entity Framework Code First to initialize and seed a database in the cloud.
 
-  * Use the Azure SQL Database Management Portal to view live data in the cloud.
+  * Use the Azure SQL Database Portal to view live data in the cloud.
 
 ### Lab Setup
 
@@ -28,7 +28,7 @@ Before starting this lab, you must complete the lab in Module 2. For the lab in 
 
     * **[Your VM IP Address]:[*Your VM RDP Port*]**
 
-  >  **Note:** The name and port for your virtual machine might be saved in the Computer drop-down list. If this is the case, use this value instead of typing it in manually. If you are unsure about your virtual machine’s RDP port, use either of the Azure portals to find your virtual machine’s endpoints. The endpoint with the name **Remote Desktop** is the correct port for RDP. This port is randomized to protect your virtual machine from unauthorized access.
+  > **Note:** The name and port for your virtual machine might be saved in the Computer drop-down list. If this is the case, use this value instead of typing it in manually. If you are unsure about your virtual machine’s RDP port, use either of the Azure portals to find your virtual machine’s endpoints. The endpoint with the name **Remote Desktop** is the correct port for RDP. This port is randomized to protect your virtual machine from unauthorized access.
 
   3. In Remote Desktop Connection, click **Connect**. Wait until the RDP client accesses the virtual machine.
 
@@ -56,11 +56,11 @@ The main tasks for this exercise are as follows:
 
   2. Create an Azure SQL database by using the Azure Portal.
 
-#### Task 1:	Sign in to the Azure Portal
+#### Task 1: Sign in to the Azure Portal
 
 1. Sign in to the Azure Portal (https://portal.azure.com).
 
-#### Task 2:	Create an Azure SQL database by using the Azure Portal
+#### Task 2: Create an Azure SQL database by using the Azure Portal
 
 1. View the list of SQL databases for your subscription.
 
@@ -82,7 +82,7 @@ The main tasks for this exercise are as follows:
 
 3. Record the name of the newly created SQL Database instance.
 
-> **Results**: After completing this exercise, you will have created both servers and databases in the SQL Database service.
+> **Results:** After completing this exercise, you will have created both servers and databases in the SQL Database service.
 
 ## Exercise 2: Using Entity Framework with Local SQL Server
 
@@ -96,7 +96,7 @@ The main tasks for this exercise are as follows:
 
   1. Run the ASP.NET web application to view events from the local SQL database.
 
-#### Task 1:	Run the ASP.NET web application to view events from the local SQL database
+#### Task 1: Run the ASP.NET web application to view events from the local SQL database
 
   1. In Visual Studio, open the **Contoso.Events** solution from the following location:
 
@@ -120,7 +120,7 @@ In this exercise, you will:
 
   * Publish a Web App application.
 
-  * View tables and data by using the Azure SQL Database Management Portal.
+  * View tables and data by using the Azure SQL Database Portal.
 
 The main tasks for this exercise are as follows:
 
@@ -132,11 +132,11 @@ The main tasks for this exercise are as follows:
 
   5. Verify that the Azure Web App website is using the new data.
 
-  6. Sign in to the Azure Management Portal.
+  6. Sign in to the Azure Portal.
 
-  7. View the migrated data in the Azure SQL Management Portal.
+  7. View the migrated data in the Azure SQL Portal.
 
-#### Task 1:	Configure DbContext with a new DatabaseInitializer
+#### Task 1: Configure DbContext with a new DatabaseInitializer
 
 1. In the **Contoso.Events.Data** project, create a new **EventsContextInitializer** class
 
@@ -152,7 +152,7 @@ The main tasks for this exercise are as follows:
   Database.SetInitializer<EventsContext>(new EventsContextInitializer());
   ```
 
-#### Task 2:	Implement seed data with DbContext
+#### Task 2: Implement seed data with DbContext
 
 1. Override the **Seed** method of the **DbMigrationsConfiguration&lt;&gt;** class.
 
@@ -188,7 +188,7 @@ The main tasks for this exercise are as follows:
 
 8. Build the **Contoso.Events.Data** project.
 
-#### Task 3:	Publish the web application with updated DbContext to Azure
+#### Task 3: Publish the web application with updated DbContext to Azure
 
 1. Update the **Web.Release.config** file in the **Contoso.Events.Web** project to use a connection string to your Azure SQL database.
 
@@ -200,15 +200,15 @@ The main tasks for this exercise are as follows:
 
   - App Service Plan: **Keep the auto-generated App Service Plan name**
 
-#### Task 4:	Verify that the Azure Web App website is using the new data
+#### Task 4: Verify that the Azure Web App website is using the new data
 
 1. View the website for your published Web App.
 
-#### Task 5:	Sign in to the Azure Management Portal
+#### Task 5: Sign in to the Azure Portal
 
 2. Sign in to the Azure Portal (https://portal.azure.com).
 
-#### Task 6:	View the migrated data in the Azure SQL Management Portal
+#### Task 6: View the migrated data in the Azure SQL Portal
 
 1. View the list of SQL databases for your subscription.
 
@@ -226,7 +226,7 @@ The main tasks for this exercise are as follows:
 
 4. View the data in the **dbo.Events** table.
 
-> **Results**: After completing this exercise, you will have configured Entity Framework to initialize a new database with seed data.
+> **Results:** After completing this exercise, you will have configured Entity Framework to initialize a new database with seed data.
 
 ©2014 Microsoft Corporation. All rights reserved.  The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.  
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.  
