--- a/Instructions/dotnet/Mod04/20532B_LAB_AK_04.md
+++ b/Instructions/dotnet/Mod04/20532B_LAB_AK_04.md
@@ -64,7 +64,7 @@
 
 19. Write down the server and database names for the new SQL Database instance.
 
-> **Results**: After completing this exercise, you will have created both servers and databases in the SQL Database service.
+> **Results:** After completing this exercise, you will have created both servers and databases in the SQL Database service.
 
 ## Exercise 2: Using Entity Framework with Local SQL Server
 
@@ -280,7 +280,7 @@
 
 3.  Verify that the website displays the single event that you created in your Entity Framework context initializer.
 
-#### Task 6: Sign in to the Azure Management Portal
+#### Task 6: Sign in to the Azure Portal
 
 1.  On the Start screen, click the **Internet Explorer** tile.
 
@@ -334,7 +334,7 @@
 
     e. In the **Select or enter a atabase name** dropdown, select **db20532**.
 
-    > **Note**: If firewall rules are not updated on the server, you may have to wait a few more minutes before proceeding.
+    > **Note:** If firewall rules are not updated on the server, you may have to wait a few more minutes before proceeding.
 
 12. On Visual Studio **Server Explorer**, expand **Data Connections** then **sv20532\[your name\].db20532.dbo** and then the **Tables** node.
 
@@ -350,7 +350,7 @@
 
 19. Close the **Contoso.Events – Microsoft Visual Studio** window.
 
-> **Results**: After completing this exercise, you will have configured Entity Framework to initialize a new database with seed data.
+> **Results:** After completing this exercise, you will have configured Entity Framework to initialize a new database with seed data.
 
 ------------------------------------------------------------------------
 
