--- a/Instructions/dotnet/Mod06/20532B_LAB_06.md
+++ b/Instructions/dotnet/Mod06/20532B_LAB_06.md
@@ -113,7 +113,7 @@ The main tasks for this exercise are as follows:
 
 1. Return the LINQ query as the result of the **GetRegistrantsNames** method.
 
-> **Results**: After completing this exercise, you will have queried entities by row key or partition key from Table storage.
+> **Results:** After completing this exercise, you will have queried entities by row key or partition key from Table storage.
 
 ## Exercise 2: Updating the Events Website to use Storage Tables
 
@@ -204,7 +204,7 @@ The main tasks for this exercise are as follows:
     this.RegistrationStub = DynamicEntity.GenerateDynamicItem(tableEntity);
     ```
 
-> **Results**: After completing this exercise, you will have used the Azure Storage SDK to retrieve and create entities.
+> **Results:** After completing this exercise, you will have used the Azure Storage SDK to retrieve and create entities.
 
 ## Exercise 3: Verifying that the Events Website is Using Azure Storage Tables for Registrations
 
@@ -290,7 +290,7 @@ The main tasks for this exercise are as follows:
 
 5.  Close the **Internet Explorer** and **Contoso.Events – Microsoft Visual Studio** applications.
 
-> **Results**: After completing this exercise, you will have used Visual Studio and the Azure emulators to create a comprehensive development environment for Azure Storage.
+> **Results:** After completing this exercise, you will have used Visual Studio and the Azure emulators to create a comprehensive development environment for Azure Storage.
 
 ©2014 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are ***not*** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
