--- a/Instructions/dotnet/Mod06/20532B_LAB_AK_06.md
+++ b/Instructions/dotnet/Mod06/20532B_LAB_AK_06.md
@@ -94,7 +94,7 @@
     return names;
     ```
 
-> **Results**: After completing this exercise, you will have queried entities by row key or partition key from Table storage.
+> **Results:** After completing this exercise, you will have queried entities by row key or partition key from Table storage.
 
 ## Exercise 2: Updating the Events Website to use Storage Tables
 
@@ -242,7 +242,7 @@
     this.RegistrationStub = DynamicEntity.GenerateDynamicItem(tableEntity);
     ```
 
-> **Results**: After completing this exercise, you will have used the Azure Storage SDK to retrieve and create entities.
+> **Results:** After completing this exercise, you will have used the Azure Storage SDK to retrieve and create entities.
 
 ## Exercise 3: Verifying that the Events Website is Using Azure Storage Tables for Registrations
 
@@ -442,7 +442,7 @@
 
 11. Close **Contoso.Events – Microsoft Visual Studio**.
 
-> **Results**: After completing this exercise, you will have used Visual Studio and the Azure emulators to create a comprehensive development environment for Azure Storage.
+> **Results:** After completing this exercise, you will have used Visual Studio and the Azure emulators to create a comprehensive development environment for Azure Storage.
 
 ------------------------------------------------------------------------
 
