--- a/Instructions/dotnet/Mod07/20532B_LAB_AK_07.md
+++ b/Instructions/dotnet/Mod07/20532B_LAB_AK_07.md
@@ -18,7 +18,7 @@
 
 6.  Click **Sign In**.
 
-#### Task 2: Create a container by using the Management Portal
+#### Task 2: Create a container by using the Portal
 
 1.  In the navigation pane on the left side of the screen, scroll down, and then click **Browse**.
 
@@ -54,7 +54,7 @@
 
     > **Note:** If you have not previously indicated that you want Visual Studio to remember your credentials, you will be prompted to enter your Microsoft account username and password to continue.
 
-4.  Expand the **stor20532*\[Your Name\]*** account node under the **Storage Accounts** node.
+4.  Expand the **stor20532*[Your Name]*** account node under the **Storage Accounts** node.
 
 5.  Expand the **Blobs** node under your storage account’s node.
 
@@ -78,7 +78,7 @@
 
 9.  Switch to the Internet Explorer window.
 
-10. In a new tab, type the following URL by replacing **\[*storage account*\]** with the name of your storage account:
+10. In a new tab, type the following URL by replacing **[*storage account*]** with the name of your storage account:
 
     ```
     https://[*storage account*].blob.core.windows.net/example/samplefile.txt
@@ -86,7 +86,7 @@
 
 11. Verify that the text **This is your sample file!** displays in the browser.
 
-    > **Results**: After completing this exercise, you will have created a blob container by using the Management Portal and viewed the blobs in the container.
+    > **Results:** After completing this exercise, you will have created a blob container by using the Portal and viewed the blobs in the container.
 
 ## Exercise 2: Populating the Container with Files and Media
 
@@ -115,58 +115,58 @@
 2.  Remove the following single line of code in the class:
 
     ```
-     return null;
+    return null;
     ```
 
 3.  At the end of the **CreateBlob** method and before the closing parenthesis, create a new **CloudBlobContainer** for the **signin** container.
 
     ```
-        CloudBlobContainer container =    _blobClient.GetContainerReference("signin");
+    CloudBlobContainer container =    _blobClient.GetContainerReference("signin");
     ```
 
 4.  Call the **CreateIfNotExists** method of the *CloudBlobContainer* variable to ensure that the container exists**:**
 
     ```
-        container.CreateIfNotExists();
+    container.CreateIfNotExists();
     ```
 
 5.  At the end of the **CreateBlob** method and before the closing parenthesis, create a new variable named *blobName*:
 
     ```
-        string blobName;
+    string blobName;
     ```
 
 6.  Use the **String.Format** static method to create a string, and then assign the string to the *blobName* variable:
 
     ```
-        blobName = String.Format("{0}_SignIn_{1:ddmmyyyss}.docx", eventKey,    DateTime.UtcNow);
+    blobName = String.Format("{0}_SignIn_{1:ddmmyyyss}.docx", eventKey,    DateTime.UtcNow);
     ```
 
 7.  At the end of the **CreateBlob** method and before the closing parenthesis, create a block blob reference by using the **GetBlockBlobReference** method and the *blobName* variable as the parameter:
 
     ```
-        ICloudBlob blob = container.GetBlockBlobReference(blobName);
+    ICloudBlob blob = container.GetBlockBlobReference(blobName);
     ```
 
 8.  Use the **Seek** method of the *MemoryStream* variable to set the position of the stream to the beginning and offset the position by the value of **0**:
 
     ```
-        stream.Seek(0, SeekOrigin.Begin);
+    stream.Seek(0, SeekOrigin.Begin);
     ```
 
 9.  Use the **UploadFromStream** method of the **ICloudBlob** interface to upload the stream to the referenced blob:
 
     ```
-        blob.UploadFromStream(stream);
+    blob.UploadFromStream(stream);
     ```
 
 10. At the end of the **CreateBlob** method and before the closing parenthesis, add the following statement:
 
     ```
-       return blob.Uri;
+    return blob.Uri;
     ```
 
-> **Results**: After completing this exercise, you will have used the Azure Storage SDK to manage blobs and containers in your storage account.
+> **Results:** After completing this exercise, you will have used the Azure Storage SDK to manage blobs and containers in your storage account.
 
 ## Exercise 3: Retrieving Files and Media from the Container
 
@@ -181,67 +181,67 @@
 4.  In the **DownloadViewModel** class, find the method with the following signature:
 
     ```
-        public async Task<DownloadPayload> GetStream()
+    public async Task<DownloadPayload> GetStream()
     ```
 
 5.  Remove the following single line of code in the class:
 
     ```
-        return await Task.FromResult<DownloadPayload>(null);
+    return await Task.FromResult<DownloadPayload>(null);
     ```
 
 6.  At the end of the **GetStream** method and before the closing parenthesis, create a new **CloudBlobClient** variable for the *\_storageAccount* variable:
 
     ```
-        CloudBlobClient blobClient = _storageAccount.CreateCloudBlobClient();
+    CloudBlobClient blobClient = _storageAccount.CreateCloudBlobClient();
     ```
 
 7.  Create a new **CloudBlobContainer** instance for the **signin** container by using the *CloudBlobClient* variable:
 
     ```
-        CloudBlobContainer container =    blobClient.GetContainerReference("signin");
+    CloudBlobContainer container =    blobClient.GetContainerReference("signin");
     ```
 
 8.  Call the **CreateIfNotExists** method of the *CloudBlobContainer* variable to ensure that the container exists:
 
     ```
-        container.CreateIfNotExists();
+    container.CreateIfNotExists();
     ```
 
 9.  At the end of the **GetStream** method and before the closing parenthesis, create a block blob reference by using the **GetBlockBlobReference** method and the *\_blobId* variable as the parameter:
 
     ```
-        ICloudBlob blob = container.GetBlockBlobReference(_blobId);
+    ICloudBlob blob = container.GetBlockBlobReference(_blobId);
     ```
 
 10. Use the **OpenReadAsync** method of the *ICloudBlob* variable to create a **Stream** and store it in a variable:
 
     ```
-       Stream blobStream = await blob.OpenReadAsync();
+    Stream blobStream = await blob.OpenReadAsync();
     ```
 
 11. At the end of the **GetStream** method and before the closing parenthesis, create a new instance of the **DownloadPayload** class:
 
     ```
-       DownloadPayload payload = new DownloadPayload();
+    DownloadPayload payload = new DownloadPayload();
     ```
 
 12. Assign the **Stream** variable to the **DownloadPayload** variable’s **Stream** property:
 
     ```
-       payload.Stream = blobStream;
+    payload.Stream = blobStream;
     ```
 
 13. Assign the *ICloudBlob* variable’s **Properties.ContentType** value to the *DownloadPayload* variable’s **ContentType** property:
 
     ```
-       payload.ContentType = blob.Properties.ContentType;
+    payload.ContentType = blob.Properties.ContentType;
     ```
 
 14. Return the *DownloadPayload* variable:
 
     ```
-       return payload;
+    return payload;
     ```
 
 #### Task 2: Generate the Test Data
@@ -264,7 +264,7 @@
 
     b. Select **Multiple startup projects**.
 
-    c. For **Contoso.Events.Cloud**, set the **Action** to **Start**.
+    c. For **Contoso.Events.Web**, set the **Action** to **Start**.
 
     d. For **Contoso.Events.Management**, set the **Action** to **Start without debugging**.
 
@@ -280,7 +280,7 @@
 
 6.  Point to **Contoso.Events.Management** under the **View Sites** header, and then click the URL under the **Browse Applications** header.
 
-7.  Point to **Contoso.Events.Cloud** under the **View Sites** header, and then click the URL under the **Browse Applications** header.
+7.  Point to **Contoso.Events.Web** under the **View Sites** header, and then click the URL under the **Browse Applications** header.
 
 8.  On the home page for the **Administration** web application, click the button to view the list of events.
 
@@ -292,7 +292,7 @@
 
 12. Click **Sign-In Sheet** to download the sign-in sheet from the server.
 
-> **Results**: After completing this exercise, you will have downloaded blobs from your storage account by using the Azure Storage SDK.
+> **Results:** After completing this exercise, you will have downloaded blobs from your storage account by using the Azure Storage SDK.
 
 ## Exercise 4: Specifying Permissions for the Container
 
@@ -327,103 +327,103 @@
 4.  In the **DownloadViewModel** class, find the method with the following signature:
 
     ```
-        public async Task<string> GetSecureUrl()
+    public async Task<string> GetSecureUrl()
     ```
 
 5.  Remove the single line of code in the class:
 
     ```
-      return await Task.FromResult<string>(String.Empty);
+    return await Task.FromResult<string>(String.Empty);
     ```
 
 6.  At the end of the **GetSecureUrl** method and before the closing parenthesis, create a new **CloudBlobClient** for the *\_storageAccount* variable.
 
     ```
-        CloudBlobClient blobClient = \_storageAccount.CreateCloudBlobClient();
+    CloudBlobClient blobClient = \_storageAccount.CreateCloudBlobClient();
     ```
 
 7.  Create a new **CloudBlobContainer** for the **signin** container by using the *CloudBlobClient* variable.
 
     ```
-        CloudBlobContainer container =    blobClient.GetContainerReference("signin");
+    CloudBlobContainer container =    blobClient.GetContainerReference("signin");
     ```
 
 8.  Call the **CreateIfNotExists** method of the *CloudBlobContainer* variable to ensure that the container exists**:**
 
     ```
-        container.CreateIfNotExists();
+    container.CreateIfNotExists();
     ```
 
 9.  At the end of the **GetSecureUrl** method and before the closing parenthesis, create a new instance of the **SharedAccessBlobPolicy** class:
 
     ```
-        SharedAccessBlobPolicy blobPolicy = new SharedAccessBlobPolicy();
+    SharedAccessBlobPolicy blobPolicy = new SharedAccessBlobPolicy();
     ```
 
 10. Set the *SharedAccessBlobPolicy* variable’s **SharedAccessExpiryTime** property to 15 minutes from the current time:
 
     ```
-       blobPolicy.SharedAccessExpiryTime = DateTime.Now.AddHours(0.25d);
+    blobPolicy.SharedAccessExpiryTime = DateTime.Now.AddHours(0.25d);
     ```
 
 11. Set the *SharedAccessBlobPolicy* variable’s **Permissions** property to **SharedAccessBlobPermissions.Read**:
 
     ```
-       blobPolicy.Permissions = SharedAccessBlobPermissions.Read;
+    blobPolicy.Permissions = SharedAccessBlobPermissions.Read;
     ```
 
 12. At the end of the **GetSecureUrl** method and before the closing parenthesis, create a new instance of the **BlobContainerPermissions** class:
 
     ```
-       BlobContainerPermissions blobPermissions = new   BlobContainerPermissions();
+    BlobContainerPermissions blobPermissions = new   BlobContainerPermissions();
     ```
 
 13. Add the newly created **SharedAccessBlobPolicy** to the *BlobContainerPermissions* variable’s **SharedAccessPolicy** with the key **“ReadBlobPolicy”**:
 
     ```
-       blobPermissions.SharedAccessPolicies.Add("ReadBlobPolicy", blobPolicy);
+    blobPermissions.SharedAccessPolicies.Add("ReadBlobPolicy", blobPolicy);
     ```
 
 14. Set the *BlobContainerPermissions* variable’s **PublicAccess** property to **BlobContainerPublicAccessType.Off**:
 
     ```
-       blobPermissions.PublicAccess = BlobContainerPublicAccessType.Off;
+    blobPermissions.PublicAccess = BlobContainerPublicAccessType.Off;
     ```
 
 15. At the end of the **GetSecureUrl** method and before the closing parenthesis, call the asynchronous **SetPermissionsAsync** method of the *CloudBlobContainer* variable by using the *BlobContainerPermissions* variable as the parameter:
 
     ```
-       await container.SetPermissionsAsync(blobPermissions);
+    await container.SetPermissionsAsync(blobPermissions);
     ```
 
 16. Invoke the **GetSharedAccessSignature** method of the *CloudBlobContainer* variable by using a new instance of the **SharedAccessBlobPolicy** class as the first parameter and the **“ReadBlobPolicy”** key as the second parameter:
 
     ```
-       string sasToken = container.GetSharedAccessSignature(new   SharedAccessBlobPolicy(), "ReadBlobPolicy");
+    string sasToken = container.GetSharedAccessSignature(new   SharedAccessBlobPolicy(), "ReadBlobPolicy");
     ```
 
 17. At the end of the **GetSecureUrl** method and before the closing parenthesis, create a block blob reference by using the **GetBlockBlobReference** method and the *\_blobId* variable as the parameter:
 
     ```
-       ICloudBlob blob = container.GetBlockBlobReference(_blobId);
+    ICloudBlob blob = container.GetBlockBlobReference(_blobId);
     ```
 
 18. Take the **Uri** property of the *ICloudBlob* variable and store it in a new *Uri* variable.
 
     ```
-       Uri blobUrl = blob.Uri;
+    Uri blobUrl = blob.Uri;
     ```
 
 19. At the end of the **GetSecureUrl** method and before the closing parenthesis, concatenate the **AbsoluteUri** of the *Uri* variable and the *sasToken* variable:
 
     ```
-        string secureUrl = blobUrl.AbsoluteUri + sasToken;
+    string secureUrl = blobUrl.AbsoluteUri + sasToken;
     ```
 
 20. Return the string variable as the result of the method:
 
     ```
-       return secureUrl;
+    return secureUrl;
     ```
 
 #### Task 3: Download documents from a protected container by using the SAS token
@@ -452,7 +452,7 @@
 
 12. Close the **Azure Storage Emulator** command prompt (cmd.exe).
 
-> **Results**: After completing this exercise, you will have modified the permissions of the containers and generated SAS tokens for the containers.
+> **Results:** After completing this exercise, you will have modified the permissions of the containers and generated SAS tokens for the containers.
 
 ****
 
