--- a/Instructions/dotnet/Mod09/20532B_LAB_AK_09.md
+++ b/Instructions/dotnet/Mod09/20532B_LAB_AK_09.md
@@ -66,7 +66,7 @@
 
 5.  Click **Sign In**.
 
-    > **Note**: If you were successful, you will see the message *"You have signed in to the Microsoft Azure Cross-platform Command Line Interface application on your device"*. The code has a timeout so it is possible to not login quickly enough using the Device Login page. If this happens, simply repeat this task.
+    > **Note:** If you were successful, you will see the message *"You have signed in to the Microsoft Azure Cross-platform Command Line Interface application on your device"*. The code has a timeout so it is possible to not login quickly enough using the Device Login page. If this happens, simply repeat this task.
 
 6.  Return to the **Command Prompt** application.
 
@@ -78,7 +78,7 @@
 
     > **Note:** If you have multiple Azure subscriptions, you can use **Select-AzureSubscription** to select the appropriate subscription. If you are unsure about your subscription's name, you can simply use **azure account list**. If your Azure subscription is provided by a Learning Partner, it might be an auto-generated account without any details. In such a case, this command will return an empty result.
 
-> **Results**: After completing this exercise, you will have set up a development environment to use xPlat CLI for Azure service automation.
+> **Results:** After completing this exercise, you will have set up a development environment to use xPlat CLI for Azure service automation.
 
 #### Task 3: Create a new Website instance by using xPlat CLI
 
@@ -88,7 +88,7 @@
     azure group create --name rga20532 --location "West US"
     ```
 
-    > **Note:** You might get an error message notifying you that your Website’s name is not unique. If this occurs, select a new name until your Website is created.
+    > **Note:** You might get an error message notifying you that your Website’s name is not unique. If this occurs, select a new name until your Website is created.
 
 1.  To view a list of your Resource Groups, type the following command in the console, and then press Enter:
 
@@ -102,7 +102,7 @@
     azure resource create --name [Unique Name] --resource-type "Microsoft.Web/Sites" --api-version "2014-06-01" --location "East US" --resource-group rga20532
     ```
 
-    > **Note:** You might get an error message notifying you that your Website’s name is not unique. If this occurs, select a new name until your Website is created.
+    > **Note:** You might get an error message notifying you that your Website’s name is not unique. If this occurs, select a new name until your Website is created.
 
 1.  To view a list of Resources in the **rga20532** Resource Group, type the following command in the console, and then press Enter:
 
@@ -156,7 +156,7 @@
     azure group show --name rga20532
     ```
 
-> **Results**: After completing this exercise, you will have used xPlat CLI to manage instances of an Azure service.
+> **Results:** After completing this exercise, you will have used xPlat CLI to manage instances of an Azure service.
 
 ## Exercise 2: Use PowerShell to Create and Manage a Resource Group
 
@@ -252,7 +252,7 @@
 
 3.  Close the **Microsoft Azure PowerShell** console window.
 
-> **Results**: After completing this exercise, you will have used Azure to interact with the Resource Manager, resource groups, and resource group templates.
+> **Results:** After completing this exercise, you will have used Azure to interact with the Resource Manager, resource groups, and resource group templates.
 
 ©2014 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are ***not*** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
