--- a/Instructions/dotnet/Mod01/20532B_LAB_AK_01.md
+++ b/Instructions/dotnet/Mod01/20532B_LAB_AK_01.md
@@ -6,19 +6,19 @@
 
 #### Task 1: Sign in to the Azure Portal
 
-1.	On the Start screen, click the **Internet Explorer** tile.
+1. On the Start screen, click the **Internet Explorer** tile.
 
-2.	Go to (https://portal.azure.com).
+2. Go to (https://portal.azure.com).
 
-3.	Enter the email address of your Microsoft account.
+3. Enter the email address of your Microsoft account.
 
-4.	Click Continue.
+4. Click Continue.
 
-5.	Enter the password for your Microsoft account
+5. Enter the password for your Microsoft account
 
-6.	Click **Sign In**.
+6. Click **Sign In**.
 
-7.	If this is your first time logging in to the Azure portal, you will see a dialog with a tour of the portal. Click **Get Started**.
+7. If this is your first time logging in to the Azure portal, you will see a dialog with a tour of the portal. Click **Get Started**.
 
 >**Results**: After completing this exercise, you will have signed in to the Azure Portal.
 
@@ -26,15 +26,15 @@
 
 #### Task 1: Customize the Dashboard
 
-1.	After the dashboard is fully loaded, right-click the **Dashboard** (home screen), and then click **Edit dashboard**.
+1. After the dashboard is fully loaded, right-click the **Dashboard** (home screen), and then click **Edit dashboard**.
 
-2.	In the **Tile Gallery**, drag the *Service Health* tile onto your dashboard.
+2. In the **Tile Gallery**, drag the *Service Health* tile onto your dashboard.
 
 3.  Click the gray button with three ellipses *“…”*.
 
-3.	Select the **2x4** size option.
+3. Select the **2x4** size option.
 
-2.	In the **Tile Gallery**, drag the *Markdown* tile onto your dashboard.
+2. In the **Tile Gallery**, drag the *Markdown* tile onto your dashboard.
 
 1.  In the **Content** section of the **Edit Markdown** dialog that appears, update the content with the following markup:
 
@@ -45,31 +45,31 @@
   > &copy;2016
   ```
 
-4.	Right-click the **Dashboard** (home screen), and then click **Done customizing**.
+4. Right-click the **Dashboard** (home screen), and then click **Done customizing**.
 
 #### Task 2: View a blade
 
-1.	On the left side of the screen, click **Browse**.
+1. On the left side of the screen, click **Browse**.
 
-2.	Within the list located in the **Browse** panel that displays, click **Subscriptions**.
+2. Within the list located in the **Browse** panel that displays, click **Subscriptions**.
 
-3.	Observe the **Subscriptions** blade that displays.
+3. Observe the **Subscriptions** blade that displays.
 
 #### Task 3: Begin a journey
 
-1.	At the top-left corner of the screen, click **New**.
+1. At the top-left corner of the screen, click **New**.
 
-2.	In the **New** panel that displays, click the **See all** link next to the **Marketplace** header.
+2. In the **New** panel that displays, click the **See all** link next to the **Marketplace** header.
 
-3.	In the **Marketplace** blade that displays, click **Web + Mobile**.
+3. In the **Marketplace** blade that displays, click **Web + Mobile**.
 
-4.	In the **Web + Mobile** blade that displays, locate the search box at the top of the blade, type in the text **starter** and then press *Enter*.
+4. In the **Web + Mobile** blade that displays, locate the search box at the top of the blade, type in the text **starter** and then press *Enter*.
 
 5. In the search **results**, locate and select the **ASP.NET Starter Web App** option.
 
-5.	In the **ASP.NET Starter Web App** blade that displays, click **Create**.
+5. In the **ASP.NET Starter Web App** blade that displays, click **Create**.
 
-6.	In the next **ASP.NET Starter Web App** blade that displays, click the **App Service plan/Location** option.
+6. In the next **ASP.NET Starter Web App** blade that displays, click the **App Service plan/Location** option.
 
 7.  In the App Service Plan blade, click the **Create New** button.
 
@@ -79,9 +79,9 @@
 
 7. Scroll to the left, and click the close (**X**) button on the first **ASP.NET Starter Web App** blade to close the journey.
 
-8.	In the **Message from webpage** Internet Explorer dialog box, click **OK**.
+8. In the **Message from webpage** Internet Explorer dialog box, click **OK**.
 
-> **Results**: After completing this exercise, you will have viewed blades, journeys, and journey parts.
+> **Results:** After completing this exercise, you will have viewed blades, journeys, and journey parts.
 
 ©2014 Microsoft Corporation. All rights reserved.  The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.  
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.  
