--- a/Instructions/dotnet/Mod02/20532B_LAB_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_02.md
@@ -42,7 +42,7 @@ The main tasks for this exercise are as follows:
 
 2. Create a virtual network and a resource group.
 
-#### Task 1:	Sign in to the Azure Portal
+#### Task 1: Sign in to the Azure Portal
 
 1. Sign in to the Azure Portal (<https://portal.azure.com>).
 
@@ -54,7 +54,7 @@ The main tasks for this exercise are as follows:
 
 2. Create a new resource group using the name: **20532**.
 
-#### Task 3:	Create a virtual network and a resource group
+#### Task 3: Create a virtual network and a resource group
 
 1. View the list of virtual networks for your subscription.
 
@@ -72,7 +72,7 @@ The main tasks for this exercise are as follows:
 
   - Subnet Address Range: **10.0.0.0/24**
 
-> **Results**:	After completing this exercise, you will have a new virtual network and resource group in Azure.
+> **Results:** After completing this exercise, you will have a new virtual network and resource group in Azure.
 
 ## Exercise 2: Creating a Development Virtual Machine
 
@@ -86,7 +86,7 @@ The main tasks for this exercise are as follows:
 
 2. Create a virtual machine.
 
-#### Task 1:	Create a storage account
+#### Task 1: Create a storage account
 
 1. View the list of Storage instances for your subscription.
 
@@ -106,7 +106,7 @@ The main tasks for this exercise are as follows:
 
   - Location: **Select the region that is closest to your location**
 
-#### Task 2:	Create a virtual machine
+#### Task 2: Create a virtual machine
 
 1. View the list of virtual machines for your subscription.
 
@@ -144,7 +144,7 @@ The main tasks for this exercise are as follows:
 
 4. Connect to the newly created virtual machine using Remote Desktop.
 
-> **Results**: After completing this exercise, you will have a new virtual machine stored in a new storage account.
+> **Results:** After completing this exercise, you will have a new virtual machine stored in a new storage account.
 
 ## Exercise 3:	Configuring the Virtual Machine for Development
 
@@ -188,7 +188,7 @@ The main tasks for this exercise are as follows:
 
   - Extract target: **Allfiles** **(F):\\**
 
-> **Results**: After completing this exercise, your development virtual machine will have your lab files installed. Your virtual machine will also have Visual Studio, Azure PowerShell, and the Azure SDK installed already.
+> **Results:** After completing this exercise, your development virtual machine will have your lab files installed. Your virtual machine will also have Visual Studio, Azure PowerShell, and the Azure SDK installed already.
 
 ©2014 Microsoft Corporation. All rights reserved.  The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.  
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.  
