--- a/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
@@ -4,7 +4,7 @@
 
 ### Exercise 1:	Creating a Network and Resource Container
 
-#### Task 1:	Sign in to the Azure Portal
+#### Task 1: Sign in to the Azure Portal
 
 1. On the Start screen, click the **Internet Explorer** tile.
 
@@ -34,7 +34,7 @@
 
 6. In the **Resource group** blade, click **Create**.
 
-#### Task 3:	Create a Virtual Network
+#### Task 3: Create a Virtual Network
 
 1.  In the navigation pane on the left side of the Azure Portal, scroll down, and then click **Browse**.
 
@@ -62,11 +62,11 @@
 
 6. In the **Virtual network** blade, click **Create**.
 
-> **Results**: After completing this exercise, you will have a new virtual network and resource group in Azure
+> **Results:** After completing this exercise, you will have a new virtual network and resource group in Azure
 
 ### Exercise 2:	Creating a Development Virtual Machine
 
-#### Task 1:	Create a storage account
+#### Task 1: Create a storage account
 
 1.  In the navigation pane on the left side of the Azure Portal, scroll down, and click **Browse**.
 
@@ -96,7 +96,7 @@
 
   e. Click **Create**.
 
-#### Task 2:	Create a virtual machine
+#### Task 2: Create a virtual machine
 
 1. In the navigation pane on  the left side of the Azure Portal, scroll down, and click **Browse**.
 
@@ -208,7 +208,7 @@
 
 11. When you are prompted to allow your network connection to discover external devices, click **Yes**.
 
-> **Results**: After completing this exercise, you will have a new virtual machine stored in a new storage account.
+> **Results:** After completing this exercise, you will have a new virtual machine stored in a new storage account.
 
 ### Exercise 3: Configuring the Virtual Machine for Development
 
@@ -316,7 +316,7 @@
 
 23. Wait for the extraction process to complete.
 
-> **Results**: After completing this exercise, your development virtual machine will have your lab files installed. Your virtual machine will also have Visual Studio, Azure PowerShell, and the Azure SDK installed already.
+> **Results:** After completing this exercise, your development virtual machine will have your lab files installed. Your virtual machine will also have Visual Studio, Azure PowerShell, and the Azure SDK installed already.
 
 ©2014 Microsoft Corporation. All rights reserved.  The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode "Creative Commons Attribution 3.0 License"), additional terms may apply.  All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are **not** included within the Creative Commons license grant.  This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.  
 This document is provided "as-is." Information and views expressed in this document, including URL and other Internet Web site references, may change without notice. You bear the risk of using it. Some examples are for illustration only and are fictitious. No real association is intended or inferred. Microsoft makes no warranties, express or implied, with respect to the information provided here.
