--- a/Instructions/dotnet/Mod09/20532B_LAB_09.md
+++ b/Instructions/dotnet/Mod09/20532B_LAB_09.md
@@ -112,7 +112,7 @@ The main tasks for this exercise are as follows:
 
     > **Note:** If you have multiple Azure subscriptions, you can use **azure account set [subscription-name]** to select the appropriate subscription. If you are unsure about your subscription's name, you can simply use **azure account list**. If your Azure subscription is provided by a Learning Partner, it might be an auto-generated account without any details. In such a case, this command will return an empty result.
 
-> **Results**: After completing this exercise, you will have set up a development environment to use xPlat CLI for Azure service automation.
+> **Results:** After completing this exercise, you will have set up a development environment to use xPlat CLI for Azure service automation.
 
 #### Task 3: Create a new Website instance by using xPlat CLI
 
@@ -178,7 +178,7 @@ The main tasks for this exercise are as follows:
     azure group show --name rga20532
     ```
 
-> **Results**: After completing this exercise, you will have used xPlat CLI to manage instances of an Azure service.
+> **Results:** After completing this exercise, you will have used xPlat CLI to manage instances of an Azure service.
 
 ## Exercise 2: Use PowerShell to Create and Manage a Resource Group
 
@@ -274,7 +274,7 @@ The main tasks for this exercise are as follows:
 
     > **Note:** Because removing a resource group involves removing multiple resources, this process can take 5 to 15 minutes on average.
 
-> **Results**: After completing this exercise, you will have used Azure to interact with the Resource Manager, resource groups, and resource group templates.
+> **Results:** After completing this exercise, you will have used Azure to interact with the Resource Manager, resource groups, and resource group templates.
 
 ©2014 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are ***not*** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
