--- a/Instructions/dotnet/Mod10/20532B_LAB_10.md
+++ b/Instructions/dotnet/Mod10/20532B_LAB_10.md
@@ -10,41 +10,35 @@ Even though the Contoso Events web application is public, the Administration app
 
 After you complete this lab, you will be able to:
 
-Create an Azure AD by using the Management Portal.
+  - Create an Azure AD by using the Classic Portal.
 
-Create users in Azure AD by using the Management Portal.
+  - Create users in Azure AD by using the Classic Portal.
 
-Create a new MVC project that uses Azure AD organizational accounts for security.
+  - Create a new MVC project that uses Azure AD organizational accounts for security.
 
 ### Lab Setup
 
-Estimated Time: 60 minutes
+**Estimated Time: 60 minutes**
 
-Before starting this lab, you must complete the lab in Module 2.
+Before starting this lab, you must complete the lab in Module 2. For the lab in this module, you will use the available host machine. Also, you must complete the following steps:
 
-For the lab in this module, you will use the available host machine.
+1.  On the host computer, click **Start**, type **Remote**, and then click **Remote Desktop Connection**.
 
-Also, you must complete the following steps:
+2.  In Remote Desktop Connection, provide the name of your virtual machine in the **Computer** box by using the following format:
 
-On the host computer, click **Start**, type **Remote**, and then click **Remote Desktop Connection**.
+    -   **[Your VM IP Address]:[*Your VM RDP Port*]**
 
-In Remote Desktop Connection, provide the name of your virtual machine in the **Computer** box by using the following format:
+    > **Note:** The name and port for your virtual machine might be saved in the Computer drop-down list. If this is the case, use this value instead of typing it in manually. If you are unsure about your virtual machine’s RDP port, use either of the Azure Portals to find your virtual machine’s endpoints. The endpoint with the name **Remote Desktop** is the correct port for RDP. This port is randomized to protect your virtual machine from unauthorized access.
 
-**[Your VM IP Address]:[*Your VM RDP Port*]**
+3.  In Remote Desktop Connection, click **Connect**. Wait until the RDP client accesses the virtual machine.
 
-> **Note:** The name and port for your virtual machine might be saved in the Computer drop-down list. If this is the case, use this value instead of typing it in manually. If you are unsure about your virtual machine’s RDP port, use either of the Azure portals to find your virtual machine’s endpoints. The endpoint with the name **Remote Desktop** is the correct port for RDP. This port is randomized to protect your virtual machine from unauthorized access.
+4.  If necessary, sign in by using the following credentials:
 
-In Remote Desktop Connection, click **Connect**. Wait until the RDP client accesses the virtual machine.
+  -   User name: **Student**
 
-If necessary, sign in by using the following credentials:
+  -   Password: **AzurePa$w0rd**
 
-> User name: **Student**
-
-&gt;
-
-> Password: **AzurePa$w0rd**
-
-Verify that you received the credentials to sign in to the Azure portal from your training provider. You will use these credentials and the Azure account throughout the labs in this course.
+5.  Verify that you received the credentials to sign in to the Azure Classic Portal from your training provider. You will use these credentials and the Azure account throughout the labs in this course.
 
 ## Exercise 1: Creating an Azure AD
 
@@ -52,83 +46,83 @@ Verify that you received the credentials to sign in to the Azure portal from you
 
 In this exercise, you will:
 
-Create an Azure AD by using the Management Portal.
+  - Create an Azure AD by using the Classic Portal.
 
-Create a Global Administrator role in the new directory.
+  - Create a Global Administrator role in the new directory.
 
-Create a standard User role in the new directory.
+  - Create a standard User role in the new directory.
 
 The main tasks for this exercise are as follows:
 
-1.  Sign in to the Azure Management Portal.
+  1.  Sign in to the Azure Classic Portal.
 
-2.  Create a directory by using the Management Portal.
+  2.  Create a directory by using the Classic Portal.
 
-3.  Create a Global Administrator role in the directory.
+  3.  Create a Global Administrator role in the directory.
 
-4.  Create a User role in the directory.
+  4.  Create a User role in the directory.
 
-#### Task 1: Sign in to the Azure Management Portal
+#### Task 1: Sign in to the Azure Classic Portal
 
-> **Note:** For this lab, you will use the Management Portal because the functionality to create new Azure Active Directory domains is not available in the Preview Portal.Sign in to the Azure Management Portal ([*https://manage.windowsazure.com*](https://manage.windowsazure.com)).
+> **Note:** For this lab, you will use the Classic Portal because the functionality to create new Azure Active Directory domains is not available in the Preview Classic Portal.Sign in to the Classic Azure Portal ([*https://manage.windowsazure.com*](https://manage.windowsazure.com)).
 
-#### Task 2: Create an directory by using the Management Portal
+#### Task 2: Create an directory by using the Classic Portal
 
 1.  View the list of Active Directory directories for your subscription.
 
-Create a new directory by using the following details:
+1. Create a new directory by using the following details:
 
-> Name: **20532**
+  - Name: **20532**
 
-&gt; Domain Name: **ad20532\[*Your Name*\]**
+  - Domain Name: **ad20532\[*Your Name*\]**
 
-&gt; Country: **Select your current location**
+  - Country: **Select your current location**
 
 #### Task 3: Create a Global Administrator role in the directory
 
 1.  Go to your newly created directory’s Users list.
 
-Add a new user to your directory by using the following details:
+1. Add a new user to your directory by using the following details:
 
-> Type of User: **New user in your organization**
+  - Type of User: **New user in your organization**
 
-&gt; User Name: **admin**
+  - User Name: **admin**
 
-&gt; Domain: **ad20532\[*Your Name*\]**
+  - Domain: **ad20532[*Your Name*]**
 
-&gt; First Name: **Admin**
+  - First Name: **Admin**
 
-&gt; Last Name: **User**
+  - Last Name: **User**
 
-&gt; Display Name: **Admin User**
+  - Display Name: **Admin User**
 
-&gt; Role: **Global Administrator**
+  - Role: **Global Administrator**
 
-> Alternate E-mail Address: [***example@contoso.com***](mailto:example@contoso.com)
->
-> **Note:** Make sure you record the temporary password that is generated when you create the new user. In case you forget, you can always reset the user’s password by using the **Reset Password** button that is next to the **Add User** button in the Management Portal.
+  - Alternate E-mail Address: [***example@contoso.com***](mailto:example@contoso.com)
+
+  > **Note:** Make sure you record the temporary password that is generated when you create the new user. In case you forget, you can always reset the user’s password by using the **Reset Password** button that is next to the **Add User** button in the Classic Portal.
 
 #### Task 4: Create a User role in the directory
 
 1.  Add a new user to your directory by using the following details:
 
-> Type of User: **New user in your organization**
+  - Type of User: **New user in your organization**
 
-&gt; User Name: **standard**
+  - User Name: **standard**
 
-&gt; Domain: **ad20532\[*Your Name*\]**
+  - Domain: **ad20532[*Your Name*]**
 
-&gt; First Name: **Standard**
+  - First Name: **Standard**
 
-&gt; Last Name: **User**
+  - Last Name: **User**
 
-&gt; Display Name: **Standard User**
+  - Display Name: **Standard User**
 
-&gt; Role: **User**
+  - Role: **User**
 
-> **Note:** Make sure you record the temporary password that is generated when you create the new user. In case you forget, you can always reset the user’s password by using the **Reset Password** button that is next to the **Add User** button in the Management Portal.
->
-> **Results**: After completing this exercise, you will have created an Azure AD and populated the directory with users.
+  > **Note:** Make sure you record the temporary password that is generated when you create the new user. In case you forget, you can always reset the user’s password by using the **Reset Password** button that is next to the **Add User** button in the Classic Portal.
+
+> **Results:** After completing this exercise, you will have created an Azure AD and populated the directory with users.
 
 ## Exercise 2: Securing an Existing ASP.NET Web Application
 
@@ -136,11 +130,11 @@ Add a new user to your directory by using the following details:
 
 In this exercise, you will:
 
-Use the MVC **AuthorizeAttribute** to secure a web application.
+  - Use the MVC **AuthorizeAttribute** to secure a web application.
 
-The main tasks for this exercise are as follows:
+  - The main tasks for this exercise are as follows:
 
-1.  Add the Authorize attribute to the HomeController class.
+1.  Add the Authorize attribute to the *HomeController* class.
 
 2.  Debug the web application.
 
@@ -148,11 +142,11 @@ The main tasks for this exercise are as follows:
 
 1.  Open the **Contoso.Events** solution from the following location:
 
-> File location: \*\*Allfiles (F):\\Mod12\\Labfiles\\Starter\\Contoso.Events
+  - File location: **Allfiles (F):\\Mod12\\Labfiles\\Starter\\Contoso.Events**
 
-Open the **HomeController.cs** file in the **Contoso.Events.Management.Old** project\*.
+  - Open the **HomeController.cs** file in the **Contoso.Events.Management.Old** project.
 
-Add the **Authorize** attribute to the **HomeController** class.
+  - Add the **Authorize** attribute to the **HomeController** class.
 
 #### Task 2: Debug the web application
 
@@ -160,7 +154,7 @@ Add the **Authorize** attribute to the **HomeController** class.
 
 2.  Stop debugging.
 
-> **Results**: After completing this exercise, you will have used MVC to ensure that a user is signed in before accessing a controller or action.
+> **Results:** After completing this exercise, you will have used MVC to ensure that a user is signed in before accessing a controller or action.
 
 ## Exercise 3: Integrating Azure AD with ASP.NET Identity
 
@@ -168,11 +162,11 @@ Add the **Authorize** attribute to the **HomeController** class.
 
 In this exercise, you will:
 
-Create a new ASP.NET MVC application by using ASP.NET Identity for authentication and authorization.
+  - Create a new ASP.NET MVC application by using ASP.NET Identity for authentication and authorization.
 
-Integrate the new Website with Azure AD organization accounts.
+  - Integrate the new Website with Azure AD organization accounts.
 
-The main tasks for this exercise are as follows:
+  - The main tasks for this exercise are as follows:
 
 1.  Create a new management web application by using Azure AD as the identity provider.
 
@@ -182,25 +176,19 @@ The main tasks for this exercise are as follows:
 
 1.  In the **Administration** solution folder, create a new **Contoso.Events.Management** ASP.NET Web Application project by using the following details:
 
-    > Project Name: **Contoso.Events.Management**
+    - Project Name: **Contoso.Events.Management**
 
-    &gt; Project Location: \*\*Allfiles
+    - Project Location: **Allfiles (F):\\Mod12\\Labfiles\\Starter\\Contoso.Events**
 
-    > (F):\\Mod12\\Labfiles\\Starter\\Contoso.Events\*\*
+    - Template: **MVC**
 
-    &gt; Template: **MVC**
+    - Authentication: **Organizational Accounts**
 
-    &gt; Authentication: **Organizational Accounts**
+    - Domain: **ad20532[*Your Name*].onmicrosoft.com**
 
-    &gt; Domain: **ad20532\[*Your Name*\].onmicrosoft.com**
+    - Account used for authentication: **admin@ad20532[*Your Name*].onmicrosoft.com**
 
-    > Account used for authentication: **admin@ad20532\[*Your Name*\].onmicrosoft.com**
-
-&gt; **Note:** When associating your new ASP.NET Web
-
-> Application project with an Azure AD domain, you must sign in by using an account that has a Global Administrator role.\*\* 
-
-\*\*
+    > **Note:** When associating your new ASP.NET Web Application project with an Azure AD domain, you must sign in by using an account that has a Global Administrator role.
 
 1.  Set the **Contoso.Events.Management** project as the startup project.
 
@@ -208,27 +196,27 @@ The main tasks for this exercise are as follows:
 
 3.  Copy all the folders from the **Contoso.Events.Management.Old** project to the **Contoso.Events.Management** project.
 
-    > **Note:** Ensure that you copy the folders and not any of the individual files. Ignore the following files:
+  > **Note:** Ensure that you copy the folders and not any of the individual files. Ignore the following files:
 
-    &gt; favicon.ico
+  - favicon.ico
 
-    &gt; Global.asax
+  - Global.asax
 
-    &gt; packages.config
+  - packages.config
 
-    > Web.config
+  - Web.config
 
-4.  Copy the connectionStrings and update in web.config.
+4.  Copy the **connectionStrings** from the web.config file in the *Contoso.Events.Management.Old* project and paste them in the new project's web.config file.
 
 #### Task 2: Verify that the Management web application requires a sign-in by using an organizational account
 
 1.  Debug the solution.
 
-    a. Configure IIS Express to trust the self-signed certificate.
+  - Configure IIS Express to trust the self-signed certificate.
 
-    b. Verify that you are required to sign in before accessing the **Contoso.Events.Management** web application.
+  - Verify that you are required to sign in before accessing the **Contoso.Events.Management** web application.
 
-> **Results**: After completing this exercise, you will have used an Azure AD domain with the ASP.NET Identity framework.
+> **Results:** After completing this exercise, you will have used an Azure AD domain with the ASP.NET Identity framework.
 
 ©2014 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are ***not*** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
