--- a/Instructions/dotnet/Mod10/20532B_LAB_AK_10.md
+++ b/Instructions/dotnet/Mod10/20532B_LAB_AK_10.md
@@ -1,12 +1,12 @@
 # Module 10: Securing Azure Web Applications
 
-# Lab: Integrating Azure Active Directory with the Events Administration Portal
+# Lab: Integrating Azure Active Directory with the Events Administration Classic Portal
 
 ## Exercise 1: Creating an Azure AD
 
-#### Task 1: Sign in to the Azure Management Portal
+#### Task 1: Sign in to the Azure Classic Portal
 
-> **Note:** For this lab, you will use the Management Portal because the functionality to create new Azure Active Directory domains is not available in the Portal.
+> **Note:** For this lab, you will use the Classic Portal because the functionality to create new Azure Active Directory domains is not available in the Portal.
 
 On the Start screen, click the **Internet Explorer** tile.
 
@@ -14,13 +14,13 @@ Go to [*https://manage.windowsazure.com*](https://manage.windowsazure.com)
 
 Enter the email address and password for your Microsoft account, and then click **Sign In**.
 
-#### Task 2: Create an directory by using the Management Portal
+#### Task 2: Create an directory by using the Classic Portal
 
 1.  In the navigation pane on the left side of the screen, scroll down, and then click **Active Directory**.
 
 2.  Click the **Directory** tab at the top of the page.
 
-3.  At the bottom of the screen,click **+New**.
+3.  At the bottom of the screen, click **+New**.
 
     a. Select **APP SERVICES**, **ACTIVE** **DIRECTORY**, **DIRECTORY**, and then click **CUSTOM** **CREATE**.
 
@@ -46,65 +46,25 @@ Enter the email address and password for your Microsoft account, and then click 
 
 4.  In the **Add user** dialog box, perform the following steps:
 
-    a. In the **Type of User**
+    a. In the **Type of User** list, select **New user in your organization**.
 
-    ```
-    list, select **New user in your organization**.
-    ```
+    b. In the **User Name** box, type **admin**.
 
-    b. In the **User Name** box, type
+    c. In the **Domain** list, ensure that only your domain (**ad20532[*Your Name*]**) is selected.
 
-    ```
-    **admin**.
-    ```
+    d. Click the right arrow to move to the next step in the wizard.
 
-    c. In the **Domain** list, ensure
+    e. In the **First Name** box, type **Admin**.
 
-    ```
-    that only your domain (**ad20532[*Your Name*]**) is selected.
-    ```
+    f. In the **Last Name** box, type **User**.
 
-    d. Click the right arrow to move
+    g. In the **Display Name** box, type **Admin User**.
 
-    ```
-    to the next step in the wizard.
-    ```
+    h. In the **Role** list, select **Global Administrator**.
 
-    e. In the **First Name** box,
+    i. In the **Alternate Email Address** box, type **example@contoso.com**.
 
-    ```
-    type **Admin**.
-    ```
-
-    f. In the **Last Name** box, type
-
-    ```
-    **User**.
-    ```
-
-    g. In the **Display Name** box,
-
-    ```
-    type **Admin User**.
-    ```
-
-    h. In the **Role** list, select
-
-    ```
-     **Global Administrator**.
-    ```
-
-    i. In the \*\*Alternate Email
-
-    ```
-     Address** box, type **example@contoso.com**.
-    ```
-
-    j. Ensure the \*\*Enable
-
-    ```
-     Multi-Factor Authentication** check box is cleared.
-    ```
+    j. Ensure the **Enable Multi-Factor Authentication** check box is cleared.
 
 5.  Click the right arrow to move to the next step in the wizard.
 
@@ -146,7 +106,7 @@ Enter the email address and password for your Microsoft account, and then click 
 
 4.  Click the check mark button to complete the wizard.
 
-> **Results**: After completing this exercise, you will have created an Azure AD and populated the directory with users.
+> **Results:** After completing this exercise, you will have created an Azure AD and populated the directory with users.
 
 ## Exercise 2: Securing an Existing ASP.NET Web Application
 
@@ -166,19 +126,17 @@ Enter the email address and password for your Microsoft account, and then click 
 
     c. Double-click the **HomeController.cs** file.
 
-    d. Locate the class definition at
+    d. Locate the class definition at the top of the file:    
 
     ```
-    the top of the file:    public class HomeController : Controller
+    public class HomeController : Controller
     ```
 
-    e. In the line above the class
+    e. In the line above the class definition, add the **Authorize** attribute:
 
     ```
-    definition, add the **Authorize** attribute:
+    [Authorize]
     ```
-
-    \[Authorize\]
 
     f. Save the **HomeController.cs** file.
 
@@ -192,11 +150,11 @@ Enter the email address and password for your Microsoft account, and then click 
 
 4.  Verify that the website returns a **401 – Unauthorized** error message.
 
-5.  Switch to the Contoso.Events – Microsoft Visual Studio window.
+5.  Switch to the *Contoso.Events – Microsoft Visual Studio* window.
 
 6.  On the **Debug** menu, click **Stop Debugging**.
 
-> **Results**: After completing this exercise, you will have used MVC to ensure that a user is signed in before accessing a controller or action.
+> **Results:** After completing this exercise, you will have used MVC to ensure that a user is signed in before accessing a controller or action.
 
 ## Exercise 3: Integrating Azure AD with ASP.NET Identity
 
@@ -264,7 +222,7 @@ Enter the email address and password for your Microsoft account, and then click 
 
     a. In the Package Manager Console pane, in the Default Project list, select Contoso.Events.Management.
 
-    b. In the Package Manager Console text area, place the cursor after the text PM,type the following command:
+    b. In the Package Manager Console text area, place the cursor after the text PM, type the following command:
 
     ```
     Install-Package EntityFramework -Version 6.0.2
@@ -278,27 +236,17 @@ Enter the email address and password for your Microsoft account, and then click 
 
     a. Copy the following folders:
 
--   **App\_Start**
+      -   **App_Start**
 
-<!-- -->
+      -   **Content**
 
--   **Content**
+      -   **Controllers**
 
-<!-- -->
+      -   **Fonts**
 
--   **Controllers**
+      -   **Scripts**
 
-<!-- -->
-
--   **Fonts**
-
-<!-- -->
-
--   **Scripts**
-
-<!-- -->
-
--   **Views**
+      -   **Views**
 
     > **Note:** To copy all the folders at once press the Shift key and then click the **App\_Start** and **Views** folders. This will select all six folders at the same time. You can then use the shortcut menu or press Ctrl+C to copy the folders.
 
@@ -308,7 +256,7 @@ Enter the email address and password for your Microsoft account, and then click 
 
     d. When prompted with **Destination File Exists**, click **Apply to all items**, and then click **Yes**.
 
-    e. Copy the connectionStrings from web.config file in **Contoso.Events.Management.Old** project and paste to web.config file in **Contoso.Events.Management** project.
+    e. Copy the *connectionStrings* from the web.config file in the **Contoso.Events.Management.Old** project and paste the content into the web.config file in **Contoso.Events.Management** project.
 
 #### Task 2: Verify that the Management web application requires a sign-in by using an organizational account
 
@@ -333,7 +281,7 @@ Enter the email address and password for your Microsoft account, and then click 
 
 8.  Close the **Microsoft Visual Studio** application.
 
-> **Results**: After completing this exercise, you will have used an Azure AD domain with the ASP.NET Identity framework.
+> **Results:** After completing this exercise, you will have used an Azure AD domain with the ASP.NET Identity framework.
 
 ©2014 Microsoft Corporation. All rights reserved. The text in this document is available under the [Creative Commons Attribution 3.0 License](https://creativecommons.org/licenses/by/3.0/legalcode), additional terms may apply. All other content contained in this document (including, without limitation, trademarks, logos, images, etc.) are ***not*** included within the Creative Commons license grant. This document does not provide you with any legal rights to any intellectual property in any Microsoft product. You may copy and use this document for your internal, reference purposes.
 
