--- a/Instructions/dotnet/Mod01/20532B_LAB_01.md
+++ b/Instructions/dotnet/Mod01/20532B_LAB_01.md
@@ -82,6 +82,10 @@ The main tasks for this exercise are as follows:
 
 1. Open the **Browse** panel, and then click the **Subscriptions** option.
 
+1. View the **Subscriptions** blade.
+
+1. Open the **Browse** panel, and then click the **Portal Settings** option.
+
 2. View the **Portal Settings** blade.
 
 #### Task 3: Begin a journey
