--- a/Instructions/dotnet/Mod01/20532B_LAB_AK_01.md
+++ b/Instructions/dotnet/Mod01/20532B_LAB_AK_01.md
@@ -45,6 +45,8 @@
   > &copy;2016
   ```
 
+2. Click the **Update** button.
+
 4. Right-click the **Dashboard** (home screen), and then click **Done customizing**.
 
 #### Task 2: View a blade
