Updated Create a Storage Account task
Added description saying to wait until the Storage Account is created before moving forward.

--- a/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_AK_02.md
@@ -93,12 +93,16 @@
   f. In the **Resource group** section, select the **Use existing** option.
 
   g. In the **Resource group** section, locate the dialog box and provide the value **20532**.
+  
+  h. Ensure that the **Pin to Dashboard** option is selected.
 
   e. Click **Create**.
+  
+    > **Note** Wait for Azure to finish creating the storage account prior to moving forward with the lab. You will receive a notification when the *Storage Account* is created and you will see the Storage Account's blade.
 
 #### Task 2: Create a virtual machine
 
-1. In the navigation pane on  the left side of the Azure Portal, scroll down, and click **Browse**.
+1. In the navigation pane on the left side of the Azure Portal, scroll down, and click **Browse**.
 
 2. In the **Browse** blade that displays, click **Virtual machines**.
 
