--- a/Instructions/dotnet/Mod02/20532B_LAB_02.md
+++ b/Instructions/dotnet/Mod02/20532B_LAB_02.md
@@ -1,4 +1,4 @@
-# Module 2: Establishing a Development Environment using Azure Virtual Machines
+# Module 2: Building Application Infrastructure in Azure
 
 # Lab: Creating an Azure Virtual Machine for Development and Testing
 
